# Whist-Server

./: .coveragerc  .dockerignore  .flake8  .pylintrc  API Logging.py  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: UPDATE: use teams test logic  aws_deploy.yml  codeql-analysis.yml  docker-build.yml  docker-image.yml  docker-publish.yml  github-publish.yml  lint.yml  pylint.yml  python-app.yml  python-ci.yml  python-publish.yml  security.yml  setup.yaml  stale.yml
requirements/: lint.txt  requirements.txt
server/: __init__.py  api.py  main.py
tests/: __init__.py  test.env
tests/routes/: test_index.py
tests/whist/server/: base_player_test_case.py  base_token_case.py  base_user_test_case.py
tests/whist/server/api/: test_index.py
tests/whist/server/database/: test_game.py  test_id_wrapper.py  test_user.py
tests/whist/server/routes/: test_index.py
tests/whist/server/services/: base_user_test_case.py  test_authentication.py  test_channel_service.py  test_error.py  test_game_db_service.py  test_game_info_db_service.py  test_password.py  test_ranking_service.py  test_user_db_service.py
tests/whist/server/web_socket/: test_entry.py  test_event.py  test_notification.py  test_side_channel.py  test_subscriber.py
tests/whist_server/: base_player_test_case.py  base_token_case.py  base_user_test_case.py  test_cli.py  test_context.py
tests/whist_server/api/: test_index.py
tests/whist_server/api/game/: base_created_case.py  test_action.py  test_game.py  test_info.py  test_join.py  test_trick.py
tests/whist_server/api/oauth2/: test_github.py
tests/whist_server/api/ranking/: test_leaderboard.py
tests/whist_server/api/room/: base_created_case.py  test_action.py  test_create.py  test_game.py  test_info.py  test_join.py  test_trick.py
tests/whist_server/api/user/: test_auth.py  test_create.py  test_info.py
tests/whist_server/database/: test_game.py  test_id_wrapper.py  test_room.py  test_user.py
tests/whist_server/services/: test_authentication.py  test_channel_service.py  test_error.py  test_game_db_service.py  test_github.py  test_password.py  test_ranking_service.py  test_room_db_service.py  test_splunk_service.py  test_user_db_service.py
tests/whist_server/web_socket/: test_entry.py  test_event.py  test_notification.py  test_side_channel.py  test_subscriber.py
whist/: __init__.py
whist/server/: __init__.py  __main__.py  api.py  cli.py  const.py  db.py  main.py  util.py
whist/server/api/: api.py
whist/server/api/game/: __init__.py  action.py  create.py  info.py  join.py  trick.py
whist/server/api/publish/: side_channel.py  subscriber.py
whist/server/api/ranking/: leaderboard.py
whist/server/api/room/: action.py  create.py
whist/server/api/user/: __init__.py  auth.py  authentication.py  create.py
whist/server/database/: __init__.py  access_token.py  connection.py  game.py  game_info.py  id_wrapper.py  room.py  token.py  user.py
whist/server/models/: py_object_id.py  user.py
whist/server/services/: authentication.py  channel_service.py  error.py  game_db_service.py  game_info_db_service.py  password.py  ranking_service.py  room_db_service.py  user_db_service.py
whist/server/user/: create.py
whist/server/web_socket/: entry.py  side_channel.py  subscriber.py
whist/server/web_socket/events/: event.py
whist_server/: __init__.py  __main__.py  cli.py
whist_server/api/: __init__.py  api.py  util.py
whist_server/api/oauth2/: __init__.py  github.py
whist_server/api/ranking/: __init__.py  leaderboard.py
whist_server/api/room/: __init__.py  action.py  create.py  game.py  info.py  join.py  trick.py
whist_server/api/user/: __init__.py  auth.py  create.py  info.py
whist_server/database/: __init__.py  connection.py  error.py  id_wrapper.py  room.py  user.py  warning.py
whist_server/services/: __init__.py  authentication.py  channel_service.py  error.py  game_info_service.py  github_service.py  password.py  ranking_service.py  room_db_service.py  splunk_service.py  user_db_service.py
whist_server/web_socket/: __init__.py  entry.py  side_channel.py  subscriber.py
whist_server/web_socket/events/: __init__.py  event.py
(+15 files in other folders)
