[tool.poetry]
name = "whist-server"
# remember to also update the version in __init__.py!
version = "0.8.0"
description = "Whist server implementation"
authors = ["Whist-Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Whist-Team/Whist-Server"
repository = "https://github.com/Whist-Team/Whist-Server"
#documentation = "https://whist-server.readthedocs.io"
keywords = ["game", "server", "whist"]
classifiers = [
    "Operating System :: OS Independent"
]
include = ["static"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Whist-Team/Whist-Server/issues"

[tool.poetry.plugins.console_scripts]
whist-server = "whist_server.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { version = ">=0.112,<0.116", extras = ["standard"] }
pymongo = "^4.7"
PyJWT = "^2.9"
splunk-sdk = "^2.0"
bcrypt = "^4.2"
whist-core = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = ">=0.23.5,<0.27.0" # .5 because that version is the first to have compat with pytest 8
flake8 = "^7.1"
flake8-docstrings = "^1.7"
pylint = "^3.2"
python-dotenv = "^1.0"
setuptools = ">=72.1,<79.0"
wheel = ">=0.43,<0.47"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integtest: Integrationtest use 'pytest -m integtest'"
]
