[project]
name = "whist-server"
# remember to also update the version in __init__.py!
version = "0.8.0"
description = "Whist server implementation"
authors = [{ name = "Whist-Team" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["game", "server", "whist"]
classifiers = [
    "Operating System :: OS Independent"
]
requires-python = ">=3.10,<4.0"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/Whist-Team/Whist-Server"
source = "https://github.com/Whist-Team/Whist-Server"
#documentation = "https://whist-server.readthedocs.io"
issues = "https://github.com/Whist-Team/Whist-Server/issues"

[project.scripts]
whist-server = "whist_server.cli:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "whist_server" }
]
include = [
    { path = "static", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
fastapi = { version = "^0.115", extras = ["standard"] }
pymongo = "^4.12"
PyJWT = "^2.10"
splunk-sdk = "^2.1"
bcrypt = "^4.3"
whist-core = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
flake8 = "^7.2"
flake8-docstrings = "^1.7"
httpx = "^0.28"
python-dotenv = "^1.1"
pylint = "^3.3"
setuptools = "^80.9"
wheel = "^0.45"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integtest: Integrationtest use 'pytest -m integtest'"
]
